# oh-my-flask

./: README.md  pyproject.toml
.github/: dependabot.yml
integrations/ohmybash/omf/: omf.plugin.sh
integrations/ohmyzsh/omf/: omf.plugin.zsh
omf/: __init__.py  cli.py  paths.py  recipes.py
omf/commands/: crosscheck.py  install.py  make.py  recipes.py  run.py  shell.py  skeleton.py  update.py
recipes/: daleks.yaml  dbbackup.yaml  flask.yaml
skeletons/backup/: backup.sh.j2
skeletons/flask/: README.md.j2  app.py.j2  pyproject.toml.j2
